Reproductor funcional, y estilos en pantalla de recomendaciones y reproductor

--- a/soundly/streaming/static/streaming/css/styles.css
+++ b/soundly/streaming/static/streaming/css/styles.css
@@ -1,6 +1,10 @@
 :root{
     --primary-100:#421b62;
+    --primary-200:#6d3aab;
+    --primary-300: #c5c5ff;
+    --primary-400: #a0a0de;
     --accent-100:#7E6A90;
+    --accent-200:#2d1343;
     --text-100:#000000;
     --text-200:#909090;
     --bg-100:#F7F0FF;
@@ -360,17 +364,47 @@ form{
     align-items: stretch;
 }
 
-.form-control {
+.form-control, .form-control-2 {
     background-color: transparent;
     border: 2px solid transparent;
     border-bottom: 2px solid var(--primary-100);
     padding: 1%;
-    padding-bottom: 2%;
     font-size: 1.2vw;
     font-family: 'Open Sans', sans-serif;
     font-weight: 340;
     width: 100%;
     height: 80%;
+}
+
+.form-control-2 {
+    font-size: 1.8vw;
+}
+
+.colorfield_field{
+    background-color: transparent;
+    border: 2px solid transparent;
+    border-bottom: 2px solid var(--primary-100);
+    font-size: 1.8vw;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 340;
+    width: 40%;
+    height: 50%;
+    margin-top: 2%;
+}
+
+.form-text {
+    background-color: transparent;
+    border: 5px solid var(--bg-200);
+    border-radius: 10px;
+    padding: 1%;
+    font-size: 1.5vw;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 340;
+    width: 100%;
+    height: 20%;
+    resize: none; 
+    overflow: auto;
+    margin-bottom: 2%;
 }
 
 .form-group {
@@ -396,7 +430,7 @@ form{
     width: 38%;
 }
 
-.form-group2, .form-group3, .form-group4, .form-group5, .form-group6 {
+.form-group2, .form-group3, .form-group4, .form-group5, .form-group6,.form-group7 {
     display: flex;
     flex-wrap: wrap;
     align-items:start;
@@ -425,6 +459,10 @@ form{
     height: 55%;
 }
 
+.form-group7 {
+    font-size: 2.4vw;
+}
+
 .form-group-tag2{
     display: flex;
     height: 100%;
@@ -434,6 +472,18 @@ form{
 .form-group-input2{
     display: flex;
     width: 65%;
+    height: 100%;
+}
+
+.form-group-tag3{
+    display: flex;
+    height: 100%;
+    width: 20%;
+}
+
+.form-group-input3{
+    display: flex;
+    width: 80%;
     height: 100%;
 }
 
@@ -534,13 +584,23 @@ form{
     margin: 0px;
 }
 
+.nota-5 {
+    position: absolute;
+    top: 25%;
+    left: 5%;
+    transform: rotate(-10deg) translateX(-40px); 
+    font-size: 6.8vw;
+    color: var(--accent-100);
+    margin: 0px;
+}
+
 .boton-regresar {
     position: absolute;
     display: flex;
     height: 5%;
     width: 6%;
     padding: 1%;
-    bottom: 7%;
+    bottom: 5%;
     left: 2%;
     align-items: center;
     justify-content: center;
@@ -816,7 +876,25 @@ h1.seccion-2{
     cursor: pointer;
 }
 
-.boton-ovalo-upload:hover, .boton-ovalo-new-song:hover, .boton-ovalo-upload-2:hover{
+.boton-ovalo-playlist{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px / 50px; 
+    border: 1px solid var(--text-100);
+    text-decoration: none;
+    background-color: var(--bg-100);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 340;
+    font-size: 1.2vw;
+    letter-spacing: 2px;
+    color: var(--text-100);
+    cursor: pointer;
+}
+
+.boton-ovalo-upload:hover, .boton-ovalo-new-song:hover, .boton-ovalo-upload-2:hover, .boton-ovalo-playlist:hover{
     background-color: var(--bg-300); 
 }
 
@@ -906,13 +984,13 @@ h1.seccion-2{
 
 .contenedor-lista-playlist{
     width: 25%;
-    height: 100%;
+    height: 96%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: flex-start;
     font-family: 'Open Sans', sans-serif;
-    padding-top: 5%;
-    margin-right: 2%;
+    padding-top: 2%;
 }
 
 .contenedor-titulo-playlist{
@@ -930,28 +1008,702 @@ h1.seccion-2{
 }
 
 .contenedor-songs-playlist{
-    height: 72%;
+    height: 82%;
     width: 100%;
     display: flex;
+    align-content: flex-start;
     overflow-y: auto;
+    padding-top: 2%;
+    flex-wrap: wrap;
 }
 
-.playlist-song{
+.playlist{
     display: flex;
-    height: 25%;
+    height: fit-content;
     width: 100%;
     padding: 2%;
+    align-items: center;
+    text-decoration: none;
+    color: var(--text-100);
+    cursor: pointer;
 }
 
-.playlist-song img{
-    height: 95%;
+.playlist:hover{
+    background-color: var(--bg-200);
+    color: var(--bg-100);
+}
+
+.playlist-cover{
+    width: 30%; 
+    height: 0; 
+    padding-top: 30%; 
+    background-color: var(--bg-200); 
+}
+
+.playlist-create-logo{
+    width: 30%; 
+    height: 0; 
+    padding-top: 30%; 
+    background-color: var(--bg-200); 
+    border-radius: 10px;
+    z-index: 1;
+    position: relative;
+}
+
+.playlist-create-logo::before {
+    content: "+"; /* El símbolo que quieres mostrar */
+    font-weight: 500;
+    font-size: 5vw;
+    color: var(--bg-100); /* Color del símbolo */
+    position: absolute; /* Posición absoluta respecto al div */
+    top: 50%; /* Centrado vertical */
+    left: 50%; /* Centrado horizontal */
+    transform: translate(-50%, -50%);
+    z-index: 3; /* Ajusta la posición para que quede perfectamente centrado */
+}
+
+.playlist:hover .playlist-create-logo::before{
+    color: var(--bg-200);
+}
+
+.playlist:hover .playlist-create-logo{
+    background-color: var(--bg-100);
+    color: var(--bg-200);
+}
+
+
+.playlist-info {
+    display: flex;
+    height: 100%;
     width: auto;
-    object-fit: cover;
-    aspect-ratio: 1 / 1;
+    padding: 1%;
+    padding-left: 5%;
+    flex-grow: 1; 
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    
+}
+
+.playlist-info p{
+    margin: 0;
+    font-size: 1.25vw;
+    
+}
+.playlist-info h3{
+    font-size: 1.8vw;
+    margin: 0;
 }
 
 .contenedor-detalles-playlist{
+    margin-left: 10%;
     width: 45%;
-    height: 100%;
+    height: 83%;
     font-family: 'Open Sans', sans-serif;
+    padding-top: 2%;
+}
+
+.contenedor-crear-playlist, .contenedor-ver-playlist{
+    display: flex;
+    flex-wrap: wrap;
+    width: 95%;
+    height: 95%;
+    border: 8px solid var(--bg-200);
+    padding: 2.5%;
+    align-content: flex-start;
+    overflow-y: auto;
+}
+
+.contenedor-boton-crear-playlist{
+    display: flex;
+    width: 100%;
+    height: 15%;
+    position: relative;
+    top: 22%;
+    display: flex;
+    justify-content: right;
+}
+
+.contenedor-header-playlist{
+    height: fit-content;
+    width: 98%;
+    padding: 1%;
+    padding-top: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    align-items: flex-end;
+}
+
+.header-playlist-cover{
+    width: 25%; 
+    height: 0; 
+    padding-top: 25%; 
+    background-color: var(--bg-200); 
+}
+
+.header-playlist-titulo{
+    height: 35%;
+    width: 100%;
+    font-size: 3.4vw;
+    font-weight: 600;
+    margin: 0;
+}
+
+.header-playlist-info{
+    padding-left: 3%;
+    height: 100%;
+    width: 70%;
+    position: relative;
+    z-index: 1;
+}
+
+.header-playlist-info-1{
+    margin: 0;
+    height: fit-content;
+    max-height: 50px;
+    width: 70%;
+    font-size: 1.1vw;
+    overflow-y: auto;
+    padding: 0;
+}
+
+.header-playlist-info-2{
+    margin: 0;
+    height: fit-content;
+    width: 50%;
+    font-size: 1.1vw;
+    padding: 0;
+}
+
+.borrar-playlist{
+    width: 26%;
+    height: 32%;
+    position: absolute;
+    top: 65%;
+    left: 76%;
+    z-index: 4;
+}
+
+.contenedor-song-playlist{
+    height: fit-content;
+    width: 100%;
+    padding: 1%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contenedor-song-playlist img{
+    height: auto;
+    width: 17%;
+    aspect-ratio: 1;
+}
+
+.contenedor-song-playlist-title{
+    display: flex;
+    height: auto;
+    width: 46%;
+    height: fit-content;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.contenedor-song-playlist-dur{
+    display: flex;
+    height: auto;
+    width: 12%;
+    height: fit-content;
+    margin-right: 1%;
+}
+
+.contenedor-song-playlist-del{
+    display: flex;
+    height: 28%;
+    width: 18%;
+}
+
+.contenedor-song-playlist h3{
+    margin: 0;
+    font-size: 1.4vw;
+}
+
+.contenedor-song-playlist p{
+    margin: 0;
+}
+
+/* Estilo para el botón circular */
+.circle-button {
+    width: 18%;
+    height: 0; 
+    padding-top: 18%;
+    background-color: var(--bg-200); 
+    border-radius: 50%; 
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    cursor: pointer; 
+    position: absolute; 
+    border: none; 
+    bottom: 50%;
+    right: 2%;
+  }
+  
+  /* Estilo para el triángulo */
+  .triangle {
+    width: 0;
+    height: 0;
+    border-left: 2.5vh solid transparent;
+    border-right: 2.5vh solid transparent; 
+    border-bottom: 4vh solid var(--bg-100);
+    transform: rotate(90deg);
+    margin-left: 10%;
+    position: absolute;
+    top: 32.5%
+  }
+  
+  /* Efecto al pasar el mouse por encima */
+  .circle-button:hover {
+    background-color: var(--primary-200); /* Cambiar el color del botón */
+  }
+  
+  .circle-button:active {
+    transform: scale(0.95); /* Efecto al hacer clic */
+  }
+
+  .contenedor-discover{
+    height: 88%;
+    width: 80%;
+    display: flex;
+    align-items: flex-start;
+    margin-left: 5%;
+    margin-top: 2%;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.5vw;
+    flex-wrap: wrap;
+  }
+
+  .contenedor-discover-header{
+    height: 10%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--text-100);
+    justify-content: space-evenly;
+    padding-bottom: 0.5%;
+  }
+
+  .contenedor-discover-elemento{
+    height: 100%;
+    width: 25%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+
+  .contenedor-discover-elemento-1{
+    height: 100%;
+    width: 18%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+
+  .contenedor-discover-titulo{
+    height: 100%;
+    width: 35%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+
+  .contenedor-discover-titulo-1{
+    height: 100%;
+    width: 35%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .contenedor-discover-canciones{
+    height: 88%;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    overflow-y: auto;
+  }
+
+  .contenedor-discover-cancion{
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    text-decoration: none;
+    color: var(--text-100);
+    padding: 1%;
+  }
+
+  .contenedor-discover-cancion:hover{
+    color: var(--bg-100);
+    background-color: var(--bg-200);
+  }
+
+  .contenedor-discover-titulo-1 h3{
+    margin: 0;
+  }
+
+  .contenedor-discover-titulo-1 p{
+    margin: 0;
+  }
+
+  .contenedor-discover-elemento-1 img{
+    height: auto;
+    width: 55%;
+    aspect-ratio: 1;
+}
+
+.triangle-2 {
+    width: 0;
+    height: 0;
+    border-left: 2.5vh solid transparent;
+    border-right: 2.5vh solid transparent; 
+    border-bottom: 4vh solid var(--bg-100);
+    transform: rotate(90deg);
+    margin: 12%;
+    margin-bottom: 20%;
+    margin-left: 6%;
+  }
+
+
+.contenedor-principal-play{
+    display: flex;
+    height: 85%;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.song-info-container{
+    width: 30%;
+    height: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+}
+
+.song-info-container img{
+    height: auto;
+    width: 90%;
+    aspect-ratio: 1;
+}
+
+.song-info-container h2{
+    margin: 0;
+    font-size: 2.2vw;
+    width: 100%;
+    font-weight: 600;
+    text-align: center;
+}
+
+.song-info-container p{
+    text-align: center;
+    margin: 0;
+    font-size: 1.8vw;
+    width: 100%;
+}
+
+.player-container {
+    text-align: center;
+    width: 30%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: 3%;
+}
+/* Botones de volumen y progreso */
+.controls {
+    width: 90%;
+    display: flex;
+    height: 25%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3%;
+}
+/* Botones de reproducción */
+
+.controls button:active {
+    transform: scale(0.95); /* Efecto al hacer clic */
+  }
+
+.play-button{
+    height: 80%;
+    width: auto;
+    aspect-ratio: 1;
+    display: inline-block;
+    cursor: pointer;
+    padding: 4%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    background-color: var(--primary-300); 
+    border: 0;
+}
+
+.play-button:hover{
+    background-color: var(--primary-400);
+}
+
+.back-button {
+    display: inline-block;
+    cursor: pointer;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: 0;
+}
+
+.back-button:hover .triangle-left{
+    border-right: 5vh solid var(--primary-400);
+}
+.back-button:hover .triangle-left-two{
+    border-right: 5vh solid var(--primary-400);
+}
+.back-button:hover .triangle-right{
+    border-left: 5vh solid var(--primary-400);
+}
+.back-button:hover .triangle-right-two{
+    border-left: 5vh solid var(--primary-400);
+}
+
+.triangle-play{
+    width: 0;
+    height: 0;
+    border-top: 3vh solid transparent;
+    border-bottom: 3vh solid transparent;
+    border-left: 5vh solid var(--accent-200);
+    margin-left: 30%;
+}
+
+.lines-pause {
+    width: 60%;
+    height: 70%;
+    background-color: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.lines-pause::before,
+.lines-pause::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 40%; /* Ancho de las líneas */
+    height: 100%;
+    background-color: var(--accent-200); /* Color de las líneas */
+}
+
+.lines-pause::before {
+    left: 25%; /* Posición de la primera línea */
+}
+
+.lines-pause::after {
+    right: -40%; /* Posición de la segunda línea */
+}
+/* Triángulo izquierdo */
+.triangle-left, .triangle-left-two {
+    width: 0;
+    height: 0;
+    border-top: 3vh solid transparent;
+    border-bottom: 3vh solid transparent;
+    border-right: 5vh solid var(--primary-300); 
+    margin-right: 2%;
+}
+
+
+.triangle-right, .triangle-right-two {
+    width: 0;
+    height: 0;
+    border-top: 3vh solid transparent;
+    border-bottom: 3vh solid transparent;
+    border-left: 5vh solid var(--primary-300); 
+    margin-left: 2%;
+}
+
+
+.volume-container,
+.progress-bar-container {
+    display: none;
+}
+.volume-container input[type="range"] {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    top: 50%;
+    appearance: none;
+    border-radius: 9999px;
+    background: linear-gradient(90deg, var(--primary-300) 30%, var(--accent-200) 30%);
+}
+
+/* Thumb: for Chrome, Safari, Edge */
+.volume-container input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    border-radius: 9999px;
+    background: var(--primary-300);
+    box-shadow: none;
+  }
+  
+  /* Thumb: for Firefox */
+.volume-container input[type="range"]::-moz-range-thumb {
+    border: none;
+    width: 24px;
+    height: 24px;
+    border-radius: 9999px;
+    background: var(--primary-300);
+    box-shadow: none;
+  }
+
+/* Barra de progreso personalizada */
+.progress-bar {
+    width: 100%;
+    height: 10px;
+    background-color: var(--accent-200);
+    border-radius: 5px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.progress-bar-filled {
+    height: 100%;
+    background-color: var(--primary-300);
+    border-radius: 5px;
+}
+
+.progress-bar-tooltip {
+    position: absolute;
+    top: -30px;
+    left: 0;
+    background-color: var(--primary-300);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;
+    display: none;
+}
+/* Barra de volumen */
+.audio-bar {
+    width: 0;
+    height: 0;
+}
+
+.controls-2{
+    width: 80%;
+    display: flex;
+    height: fit-content;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 3%;
+    position: relative;
+}
+
+.controls-2 button{
+    width: 15%;
+    height: fit-content;
+    background-color: transparent;
+    border: 0;
+}
+
+.controls-2 button:hover img{
+    filter: brightness(50%);
+}
+
+.controls-2 img{
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1;
+}
+
+.contenedor-pl-titulo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 8%;
+}
+
+.contenedor-ovalo-pl, .contenedor-ovalo-boton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    border-radius: 50px / 50px; 
+    border: 1px solid var(--text-100);
+}
+
+.contenedor-ovalo-boton{
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 3vh;
+}
+
+.contenedor-ovalo-boton:hover{
+    background-color: var(--bg-300);
+}
+
+.contenedor-next-songs{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 70%;
+    height: 50%;
+    padding: 1%;
+    overflow-y: auto;
+    flex-wrap: wrap;
+}
+
+.contenedor-next-song{
+    display: flex;
+    height: fit-content;
+    width: 90%;
+    margin-top: 5%;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2vw;
+
+}
+
+.contenedor-next-song p{
+    margin: 0;
+}
+
+.contenedor-add-song{
+    display: flex;
+    width: 15%;
+    height: 80%;
+    justify-content: center;
+    
+}
+
+.contenedor-add-song-boton{
+    display: flex;
+    width: 80%;
+    height: 10%;
+    justify-content: center;
 }
